# CIRISLens

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  apply_migration.py  docker-compose.managed.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.sh  sonar-project.properties
.github/workflows/: build.yml  docker-publish.yml
FSD/: CIRIS_SCRUBBING_V2.md  LENS_CORE_ADOPTION_GIFT_PACKAGE.md  ciris_scoring_specification.md  ciris_scoring_ui_specification.md  coherence_ratchet_detection.md  single_agent_trace_pendulum_viewer.md  trace_format_1.9.1.md  trace_format_specification.md  trace_repository_api.md
admin/: admin.js  index.html  oauth-callback.html  types.ts
api/: .dockerignore  Dockerfile  accord_api.py  accord_api_v2.py  ciris_scoring.py  covenant_api.py  covenant_api_v2.py  federation_mirror.py  lens_scrubber.py  log_ingest.py  main.py  malformation_logger.py  manager_collector.py  migrations.py  otlp_collector.py  persist_engine.py  pii_scrubber.py  read_pool.py  requirements.txt  schema_api.py  schema_sync.py  scoring.py  scoring_api.py  scrubber_compare.py  scrubber_v2.py  security_sanitizer.py  token_manager.py  trace_schema_registry.py
api/analysis/: __init__.py  coherence_ratchet.py  scheduler.py
cirislens-core/: Cargo.toml  README.md  pyproject.toml
cirislens-core/benches/: scrubber_bench.rs
cirislens-core/models/: README.md
cirislens-core/proptest-regressions/scrubber/: proptests.txt
cirislens-core/src/: lib.rs
cirislens-core/src/extraction/: metadata.rs
cirislens-core/src/logging/: mod.rs  structured.rs
cirislens-core/src/pipeline/: context.rs  ingestion.rs  mod.rs
cirislens-core/src/routing/: decision.rs  mock_detection.rs  mod.rs
cirislens-core/src/scrubber/: mod.rs  ner.rs  proptests.rs  regex.rs  walker.rs  xlm_r_loader.rs
cirislens-core/src/security/: mod.rs  pii.rs  sanitizer.rs
cirislens-core/src/storage/: mod.rs  models.rs  queries.rs
cirislens-core/src/validation/: mod.rs  schema.rs  schema_cache.rs  signature.rs
cirislens-core/tests/: golden_test.rs
cirislens-core/tests/golden/detailed/: 01_en_year_bare.expected.json  01_en_year_bare.input.json  02_en_year_identifier.expected.json  02_en_year_identifier.input.json  03_en_email.expected.json  03_en_email.input.json  04_en_phone.expected.json  04_en_phone.input.json  05_en_ipv4.expected.json  05_en_ipv4.input.json  06_en_url.expected.json  06_en_url.input.json  07_en_ssn.expected.json  07_en_ssn.input.json  08_en_credit_card.expected.json  08_en_credit_card.input.json  09_en_multi_pii.expected.json  09_en_multi_pii.input.json  10_en_no_pii.expected.json  10_en_no_pii.input.json  11_year_2024_excluded.expected.json  12_year_1699_excluded.expected.json  13_es_year.expected.json  13_es_year.input.json  14_fr_year.expected.json  14_fr_year.input.json  15_de_year.expected.json  15_de_year.input.json  16_ru_year.expected.json  16_ru_year.input.json  17_zh_year.input.json  18_ja_year.expected.json  18_ja_year.input.json  19_ko_year.expected.json  19_ko_year.input.json  20_ar_year.expected.json  20_ar_year.input.json  21_he_year.expected.json  21_he_year.input.json  22_hi_year.expected.json  (+27 more)
cirislens-core/tests/golden/full_traces/: README.md
config/: grafana.ini  loki.yaml  mimir-simple.yaml  mimir.yaml  nginx.conf  otel-collector-public.yaml  otel-collector-simple.yaml  otel-collector.yaml  prometheus.yml  public-architecture.yaml  schemas.yaml  tempo.yaml
dashboards/: billing-analytics-dashboard.json  ciris-overview.json  coherence_ratchet.json  error-correlation-dashboard.json  logs-dashboard.json  main-dashboard.json  overview.json  public-dashboard.json  service-logs-dashboard.json  service-metrics.json  traces-dashboard.json
docs/: AGENT_DEPLOYMENT_UI.md  AGENT_TEAM_NOTE_LOGSHIPPER.md  COMPLIANCE_STATEMENT.md  PRIVACY_PAGE_CONTENT.md  PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  RCA_GRAFANA_SQLITE_LOCK.md  SECURITY.md  STATUS_API_REQUIREMENTS.md  TESTING_STRATEGY.md  THREAT_MODEL.md  TROUBLESHOOTING.md  UNIFIED_LOGGING_PLAN.md  trace_browser_integration.md
nginx/: generate-dev-certs.sh  lens-site.conf  managed-nginx.conf
release_v2/: README.md
schemas/: connectivity.json  index.json  v1.8.json  v1.9.1.json  v1.9.3.json  v1.9.json
scripts/: backup.sh  build_hf_release.py  corpus_shape.py  deploy-production.sh  diagnose_score.py  emit_lens_extras.py  export_corpus.sh  export_ner_onnx.py  export_qa_27_9.py  export_xlmr_ner.py  finalize_release.py  frechet_validation.py  generate_scrub_key.py  measure_n_eff.py  measure_n_eff_rolling.py  migrate_pubkeys_to_federation.py  rescrub_release.py  rescrub_release_v3.py  reset-grafana-password.sh  scrubber_bench.py  setup-grafana-public.sh  spacy_post_pass.py  visualize_agent_journey.py
sdk/: INTEGRATION.md  __init__.py  logshipper.py  resilience.py
sql/: 001_grafana_db.sql  004_add_error_tracking.sql  005_add_occurrence_tracking.sql  006_timescaledb_migration.sql  007_service_logs.sql  008_status_checks.sql  009_add_region_support.sql  010_covenant_compliance.sql  011_covenant_traces.sql  012_pii_scrubbing.sql  012_trace_levels_idma.sql  014_trace_repository_access.sql  015_mock_trace_repository.sql  016_malformed_traces.sql  017_positive_moments.sql  018_schema_version.sql  019_tsaspdma_support.sql  020_connectivity_events.sql  021_trace_schemas.sql  022_covenant_to_accord.sql  023_dsar_requests.sql  024_step_timestamps.sql  025_observation_weight.sql  026_trace_context_view.sql  027_widen_span_id.sql  init.sql  manager_tables.sql  migration_001_manager_id.sql  otlp_tables.sql
ssl/: cert.pem  key.pem
static/: index.html
tests/: __init__.py  conftest.py  mocks.py  strategies.py  test_accord_api.py  test_api.py  test_ciris_scoring.py  test_coherence_ratchet.py  test_covenant_api.py  test_dsar.py  test_manager_collector.py  test_migrations.py  test_pii_scrubber.py  test_security_sanitizer.py  test_status.py  test_trace_repository.py
tools/: manager_validator.py  test_otlp_collection.py
tools/analysis/: sonar.py
(+32 files in other folders)
