[project]
name = "cirislens"
version = "0.1.0"
description = "Observability layer for the CIRIS ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CIRIS Team", email = "team@ciris.ai"}
]
keywords = ["observability", "telemetry", "opentelemetry", "grafana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "authlib>=1.2.0",
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-proto>=1.21.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.0",
    # Statistical analysis for Coherence Ratchet detection
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    # Ed25519 signature verification
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.0",  # For TestClient
    "respx>=0.20.0",  # Mock httpx requests
    "hypothesis>=6.92.0",  # Property-based testing
    "faker>=22.0.0",  # Realistic test data
    "asyncpg-stubs>=0.29.0",
    "types-aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://github.com/CIRISAI/CIRISLens"
Documentation = "https://agents.ciris.ai/docs/lens"
Repository = "https://github.com/CIRISAI/CIRISLens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "sdk"]

# Ruff - fast Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api", "sdk", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments (sometimes necessary for APIs)
    "PLR2004", # magic value comparison (too noisy)
    "S101",    # assert usage (fine in tests)
    "B008",    # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # Assert usage fine in tests
    "ARG001",   # Unused arguments
    "PLR2004",  # Magic values
    "S311",     # Random for non-crypto (fine in tests)
    "S105",     # Hardcoded test passwords
    "S106",     # Hardcoded test password arguments
    "TCH003",   # Type checking imports
    "PTH100",   # Path methods
    "PTH109",   # os.getcwd() vs Path.cwd()
    "PTH118",   # os.path.join vs Path /
    "PTH120",   # Path methods
    "C401",     # Generator vs comprehension style
    "PLC0415",  # Import not at top level (fine in tests for lazy imports)
    "SIM117",   # Nested with statements (pytest.raises pattern)
]
# FastAPI route handlers require auth user arg even if not used (dependency injection pattern)
"api/main.py" = [
    "PLR0915",   # Allow complex main module for now
    "ARG001",    # Unused 'user' arg in routes - needed for auth dependency
    "PLW0602",   # Global statements for lifecycle management
    "PLW0603",   # Global statements for lifecycle management
    "S104",      # Binding to 0.0.0.0 is intentional for Docker
    "S110",      # try-except-pass for websocket cleanup
    "RUF006",    # Fire-and-forget tasks for collector restart
]
"api/manager_collector.py" = [
    "S501",      # verify=False for internal services behind Cloudflare
]
"api/otlp_collector.py" = [
    "PLR0912",   # Complex functions for OTLP processing
]
"api/token_manager.py" = [
    "PLR0912",   # Complex token management function
]
"sdk/logshipper.py" = [
    "S310",      # URL open - SDK only connects to HTTPS endpoints
]
"api/covenant_api.py" = [
    "TCH003",    # UUID needed at runtime for FastAPI path parameters
    "S608",      # SQL query building uses parameterized values, not string interpolation
    "PLC0415",   # Inline imports to avoid circular dependencies and for optional deps (nacl)
    "PLW0602",   # Global cache access pattern
    "PLW0603",   # Global cache/scheduler management
    "PLR0912",   # Complex metadata extraction from traces
    "PLR0915",   # Complex metadata extraction from traces
    "F401",      # Some imports used dynamically
]

[tool.ruff.lint.isort]
known-first-party = ["api", "sdk"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy - static type checker
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "opentelemetry.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=api",
    "--cov=sdk",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["api", "sdk"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
