[package]
name = "cirislens-core"
version = "0.1.0"
edition = "2021"
description = "High-performance trace ingestion pipeline for CIRISLens"
license = "MIT"
authors = ["CIRIS Team"]

[lib]
name = "cirislens_core"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["std"] }
base64 = "0.21"

# Regex for security patterns
regex = "1.10"
lazy_static = "1.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Hex encoding (for hash output)
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
# criterion = "0.5"  # Uncomment when adding benchmarks

# [[bench]]
# name = "ingestion_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
