[package]
name = "cirislens-core"
version = "0.1.0"
edition = "2021"
description = "High-performance trace ingestion pipeline for CIRISLens"
license = "MIT"
authors = ["CIRIS Team"]

[lib]
name = "cirislens_core"
# `cdylib` for the PyO3 extension module shipped as `cirislens_core.so`.
# `rlib` so benches and integration tests can link against the crate's
# public API directly.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["std"] }
base64 = "0.21"

# Regex for security patterns
regex = "1.10"
lazy_static = "1.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Hex encoding (for hash output)
hex = "0.4"

# ── Scrubbing v2: NER inference (FSD §8 Stage 1) ──
# Optional, behind the `ner` feature flag. Default build does not pull
# these deps, keeping CI clean.
#
# Inference backend: candle (HuggingFace's pure-Rust ML framework).
# Selected over ONNX runtime crates after evaluation: candle has native
# XLM-RoBERTa support (no ONNX export round-trip), is HF-maintained
# (same shop as the model weights), pure Rust + optional CUDA/Metal,
# and avoids the ort/ort-sys version-skew problem entirely. See
# FSD §10 for the rationale and the alternatives that were rejected.
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }

# ONNX Runtime backend (INT8 quantized inference). Behind the `ner-ort`
# feature so the candle/ort backends are independently buildable.
# `download-binaries` pulls a prebuilt onnxruntime shared library so we
# don't need a system install.
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = { version = "0.16", optional = true }

[features]
# Default build: regex + walker only. CI fast, no native deps.
default = []
# NER inference via candle's native XLM-R implementation.
ner = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]
# NER inference via ONNX Runtime (INT8 quantized model, ~3-4× faster on CPU).
# Composes with `ner` — both backends compile in, runtime picks via env var.
ner-ort = ["ner", "dep:ort", "dep:ndarray"]

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# R3.3 — scrubber throughput benchmark. Default build runs the regex-only
# (Detailed) path; the NER path is wired behind `--features ner` so the
# benchmark binary can also report full-pipeline numbers when model
# weights are available.
[[bench]]
name = "scrubber_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
